commenting and error resolving

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@ package="com.example.prateek.demonimbl3project">
         </intent-filter>
     </activity>
 
-
+<activity android:name=".SurvayPageActivity"></activity>
 </application>
 
 </manifest>
